# BeeMapPRO

./: .dockerignore  .env  .env.docker  .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  replit.nix  theme.json
attached_assets/: Pasted-BeeMap-Pro-Plataforma-Integrada-de-Gest-o-e-An-lise-para-Apicultura-de-Precis-o-Miss-o-Revolucio-1743906209257.txt
backend/: main.py  requirements.txt
backend/api/routes/: vegetation_routes.py
backend/models/: geospatial.py  ml_model.py
backend/python/: README.md  __init__.py  main.py  requirements.txt
backend/python/examples/: geo_cnn_demo.py
backend/python/flora_detection/: __init__.py  api.py  geo_cnn.py  models.py  utils.py
backend/services/: geospatial_analysis.py  ml_service.py
client/src/: App.tsx  LandingPage.tsx  firebase.ts  main.tsx
client/src/components/: Header.tsx  LanguageSelector.tsx  mode-toggle.tsx  theme-provider.tsx
client/src/contexts/: apiary-context.tsx  notification-context.tsx  theme-context.tsx
client/src/i18n/: config.ts
client/src/lib/: api-services.ts  (+3 more)
docker/: Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml  python.Dockerfile
docs/: mobile-app-requirements.md
migrations/: .gitkeep
mobile/: .env.example  README.md  package.json  setup.sh
python/: README.md  main.py  requirements.txt
python/examples/: geo_cnn_demo.py
python/flora_detection/: __init__.py  api.py  geo_cnn.py  models.py  utils.py
server/: db.ts  in-memory-storage.ts  index.ts  routes.ts  storage.ts  vite.ts
shared/: schema.ts
(+53 files in other folders)
